--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "recharts": "^3.7.0",
+    "@react-pdf/renderer": "^3.4.0",
     "shadcn": "^3.8.1",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
